# disease_assistant

./: Dockerfile  LICENSE  README.md  pycrucible.toml  pyproject.toml
.circleci/: config.yml
.flox/: env.json
.github/workflows/: build.yaml  code_analysis.yml  docker.yml  github.yaml  helpr.yaml  huggingface.yml  lint.yaml  pyapp.yaml  pycrucible.yaml  t1.yaml  trunk_upgrade.yml
.trunk/: trunk.yaml
src/disease_assistant/: __init__.py  __main__.py  graph.py  gui.py  state.py
