[project]
name = "disease-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
    { name = "Abdelrahman Amin" },
    { name = "Abdelrahman Mostafa Mohamed" },
    { name = "Youssef Mohammad" },
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.7",
]

[project.scripts]

disease-assistant = "disease_assistant.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
