[project]
name = "disease-assistant"
version = "0.0.1"
description = "Disease Assistant Agent Multi-System"
readme = "README.md"
authors = [
  { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
  { name = "Abdelrahman Amin" },
  { name = "Abdelrahman Mostafa Mohamed" },
  { name = "Youssef Mohammad" },
]
requires-python = ">=3.12"
dependencies = [
  "gradio[mcp]>=5.33.0",
  "langchain-groq>=0.3.2",
  "langgraph>=0.4.8",
  "loguru>=0.7.3",
]

[project.scripts]
disease-assistant = "disease_assistant.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.11.12", "ty>=0.0.1a8"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
division-by-zero = "error"

[tool.ty.environment]
python = "./.venv"
